<resources>
    <string name="app_name">Oaxaca Seguro</string>
    <string name="title_activity_menu_eventos">MenuEventos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msg_subscribed">INSCRITO</string>
    <string name="msg_subscribe_failed">ERROR AL INSCRIBIRSE</string>
    <string name="letras_permitidas">A BCDEFGHIJKLMÑNOPQRSTUVWXYZ</string>

    <string name="menu_home">Menú principal</string>
    <string name="menu_gallery">¿Qué es?</string>
    <string name="menu_funciones">Funciones</string>
    <string name="menu_slideshow">Conf. Código Mujer</string>
    <string name="menu_vigilancia_vecinal">Conf. Alerta Vecinal</string>
    <string name="menu_transporte">Conf. Movilidad Segura</string>
    <string name="menu_nino_perdido">ALERTAS VIGENTES</string>
    <string name="menu_tools">Aviso de Privacidad</string>
    <string name="menu_share">Terminos y Condiciones</string>
    <string name="menu_send">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="appwidget_text_v">CÓDIGO  MUJER</string>
    <string name="add_widget_v">Agregar acceso mujer oaxaqueña</string>

    <string name="appwidget_text">MOVILIDAD SEGURA</string>
    <string name="add_widget">Agregar acceso movilidad segura</string>

    <string name="appwidget_text_vv">ALERTA VECINAL</string>
    <string name="add_widget_vv">Agregar acceso alerta vecinal</string>

    <string name="default_notification_channel_id" translatable="false">GENERAL_CHANEL</string>
    <string name="title_activity_mensaje_error">MensajeError</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>
