<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.gob.sspo.movimientovecinal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mx.gob.sspo.movimientovecinal.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/funciones"
        android:name="mx.gob.sspo.movimientovecinal.ui.funciones.Funciones"
        android:label="@string/menu_funciones"
        tools:layout="@layout/funciones_fragment" />

    <fragment
        android:id="@+id/vigilancia"
        android:name="mx.gob.sspo.movimientovecinal.ui.vigilancia_vecinal.Vigilancia"
        android:label="vigilancia_fragment"
        tools:layout="@layout/vigilancia_fragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mx.gob.sspo.movimientovecinal.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/ninoPerdido"
        android:name="mx.gob.sspo.movimientovecinal.ui.nino_perdido.NinoPerdido"
        android:label="nino_perdido_fragment"
        tools:layout="@layout/nino_perdido_fragment" />
    <fragment
        android:id="@+id/transporte"
        android:name="mx.gob.sspo.movimientovecinal.ui.transporte.Transporte"
        android:label="transporte_fragment"
        tools:layout="@layout/transporte_fragment" />
    <fragment
        android:id="@+id/nav_tools"
        android:name="mx.gob.sspo.movimientovecinal.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="mx.gob.sspo.movimientovecinal.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="mx.gob.sspo.movimientovecinal.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />



</navigation>